2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
	* ReductionFilter/ReduceEntity.m, SpaceTimeViewer/STEntityTypeLayout.m,
	  SpaceTimeViewer/STLayoutEditor.m, StatViewer/StatArray.m: rename
	  subclassResponsibility to _subclassResponsibility (does not exist in Mac)

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
	* ContainerFilter/ContainerSelector.nib, OrderFilter/Order.nib,
	  EntityTypeFilter/EntityTypeSelector.nib, Paje/Paje.nib,
	  FieldFilter/FieldFilter.nib, ReductionFilter/ReductionFilter.nib,
	  General/HierarchyBrowser.nib, SpaceTimeViewer/STEntityTypeLayout.nib,
	  General/PajeEntityInspector.nib, SpaceTimeViewer/SpaceTime.nib,
	  General/SourceTextViewer.nib, StatViewer/StatViewer.nib,
	  ImbricationFilter/InsetLimit.nib: new interface files for MacOSX
	* ContainerFilter/GNUmakefile, EntityTypeFilter/GNUmakefile,
	  FieldFilter/GNUmakefile, General/GNUmakefile,
	  ImbricationFilter/GNUmakefile, OrderFilter/GNUmakefile,
	  Paje/GNUmakefile, ReductionFilter/GNUmakefile,
	  SpaceTimeViewer/GNUmakefile, StatViewer/GNUmakefile: declare nib files
	  as resources

2007-07-19  Benhur Stein <benhur@inf.ufsm.br>
	* General/Macros.h: declare debug log macros missing in MacOSX

2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* FileReader/PajeFileReader.m: remove file compression support
	  when on MacOSX (GNUstep extension)

2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* EntityTypeFilter/EntityTypeSelector.m: make ColoredSwitchButtonCell
	  appear on MacOSX; add missing enumerator method

2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* AggregatingFilter/AggregateValue.[hm]: avoid inter-bundle
	dependency (derive from PajeEntity instead of UserValue)

2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* AggregatingFilter/AggregateEvent.h, StatViewer/PieCell.m:
	  correct method name (subValueAtIndex:)

2007-07-18  Benhur Stein <benhur@inf.ufsm.br>
	* General/PajeEvent.m: fix 'for' limit (bug report from Lucas Schnorr)

2007-03-11  Benhur Stein <benhur@inf.ufsm.br>